# wisper-agent

./: .gitignore  CLAUDE.md  CMakeLists.txt  PHASES.md  README.md  installer-nvidia.iss  installer-universal.iss  installer.iss
.claude/skills/release-version/: SKILL.md
scripts/: package-release.sh
src/: audio_capture.cpp  audio_capture.h  cuda_manager.cpp  cuda_manager.h  keyboard_hook.cpp  main.cpp  model_manager.cpp  overlay.cpp  overlay.h  processor_llm.cpp  settings.cpp  settings.h  text_injector.cpp  text_injector.h  transcriber.cpp  transcriber.h  tray.cpp  tray.h  updater.cpp  version.h  wav_writer.cpp
